<resources>
    <string name="app_name">Mis Lugares App</string>
    <string name="registro_con_e_mail">Registro Con Email</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="cargando">Cargando</string>
    <string name="facebook_app_id">203866656749594</string>
    <string name="title_activity_inicio_">Inicio_Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_iniciar_sesion">Iniciar Sesión</string>
    <string name="correo">Correo Electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="title_activity_registro_email">Registro Email</string>
    <string name="confirmar_correo_electr_nico">Confirmar Correo Electrónico</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="registrate">Registrate</string>
    <string name="si_ya_tienes_cuenta_inicia_sesi_n"><u>Si ya tienes cuenta inicia sesión</u></string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="mis_lugares">Mis Lugares</string>
    <string name="crear_lugar">Crear Lugar</string>

    <string name="error_vacio">El campo no puede estar vacio</string>
    <string name="error_pass">Las contraseñas no coinciden</string>
    <string name="error_email">Los correos no coinciden</string>
    <string name="error_tamanio">La contraseña es muy corta</string>
    <string name="error_invalid_email">El email no  es valido</string>
    <string name="Cerrar">Cerrar Sesión</string>
    <string name="img">img</string>
    <string name="msjErrorPermisos">Para poder utlizar la aplicacion se requieren todos los permisos</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nombre">Nombre</string>
    <string name="imagen">Imagen</string>
</resources>
