<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_registro_email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sainet.mislugaresapp.RegistroEmailActivity"
    tools:showIn="@layout/activity_registro_email">

    <TextView
        android:text="@string/si_ya_tienes_cuenta_inicia_sesi_n"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtInicia"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:textStyle="normal|bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInicia">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:id="@+id/edt_correo"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_confirmacion_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_correo">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar_correo_electr_nico"
            android:inputType="textEmailAddress"
            android:id="@+id/edt_conf_email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_confirmacion_correo">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:id="@+id/edt_pass" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_confirmacion_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/input_pass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar_contrase_a"
            android:inputType="textPassword"
            android:id="@+id/edt_conf_pass" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btnRegitrar"
        android:layout_width="213dp"
        android:layout_below="@+id/input_confirmacion_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/registrate"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_height="30dp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
